Expand transparent background settings to include additional "about:" URLs in userContent.css

--- a/userContent.css
+++ b/userContent.css
@@ -36,7 +36,51 @@ body.gm-popup {
 }
 
 
-@-moz-document url("about:home"), url("about:addons"), url("about:newtab"), url("about:blank"), url("about:preferences"), url("about:url-classifier"), url("about:config"), url("about:cache"), url("about:support"), url("about:logins") {
+@-moz-document url("about:about"),
+url("about:addons"),
+url("about:buildconfig"),
+url("about:cache"),
+url("about:certificate"),
+url("about:checkerboard"),
+url("about:compat"),
+url("about:config"),
+url("about:crashes"),
+url("about:credits"),
+url("about:debugging"),
+url("about:deleteprofile"),
+url("about:downloads"),
+url("about:editprofile"),
+url("about:home"),
+url("about:license"),
+url("about:logging"),
+url("about:logins"),
+url("about:loginsimportreport"),
+url("about:logo"),
+url("about:memory"),
+url("about:mozilla"),
+url("about:networking"),
+url("about:newprofile"),
+url("about:newtab"),
+url("about:policies"),
+url("about:preferences"),
+url("about:privatebrowsing"),
+url("about:processes"),
+url("about:profiles"),
+url("about:profiling"),
+url("about:protections"),
+url("about:rights"),
+url("about:robots"),
+url("about:serviceworkers"),
+url("about:studies"),
+url("about:support"),
+url("about:sync-log"),
+url("about:telemetry"),
+url("about:unloads"),
+url("about:url-classifier"),
+url("about:webauthn"),
+url("about:webrtc"),
+url("about:welcome"),
+url("about:blank") {
 	body {
 		background-color: transparent !important;
 	}
