--- a/userChrome.css
+++ b/userChrome.css
@@ -115,12 +115,11 @@
 }
 
 #nav-bar {
-	padding-top: 2px !important;
+	padding-top: 3px !important;
 	padding-bottom: 2px !important;
 }
 
 #TabsToolbar {
-	padding-bottom: 1px !important;
 	padding-top: 3px !important;
 	padding-left: 5px;
 	padding-right: 10px;
@@ -189,6 +188,10 @@ browser {
 
 .toolbar-items {
 	padding-right: 6px;
+}
+
+#sidebar-button {
+	margin-left: 8px;
 }
 
 #tabbrowser-tabbox[sidebar-shown=""] {
