--- a/navbar.css
+++ b/navbar.css
@@ -27,7 +27,7 @@
 #nav-bar .toolbarbutton-1 image,
 #nav-bar .toolbarbutton-1 .toolbarbutton-badge-stack {
 	fill: var(--tint-color-primary) !important;
-	border-radius: 6px !important;
+	border-radius: var(--border-circle) !important;
 }
 
 #nav-bar .toolbarbutton-1 {
