--- a/userChrome.css
+++ b/userChrome.css
@@ -10,7 +10,9 @@
     --lwt-accent-color: AccentColor;
     --tab-loading-fill: AccentColor !important;
     --button-primary-bgcolor: AccentColor !important;
-    --border-circle: 99px;
+    --border-circle: 8px;
+    --border-big: 8px;
+    --border-big-2: 8px;
     --tab-min-height: 32px !important;
     --tab-min-width: 66px !important;
     --fullscreen-color: #fafafa;
@@ -18,6 +20,15 @@
     --urlbar-base-color: var(--toolbar-bgcolor);
     --urlbar-overlay-active: color-mix(in srgb, var(--toolbar-color) 5%, transparent);
     --urlbar-overlay-non-active: color-mix(in srgb, var(--toolbar-color) 9%, transparent);
+}
+
+/* Enable Safari-like Tahoe UI when `userChrome.tahoeUI.enabled` is true in about:config */
+@media -moz-pref("userChrome.tahoeUI.enabled") {
+    :root {
+        --border-circle: 99px;
+        --border-big: 20px;
+        --border-big-2: 16px;
+    }
 }
 
 @media (prefers-color-scheme: dark) {
